...
    <string name="delete_this_post">Delete This Post</string>
    <string name="delete_this_comment">Delete This Comment</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="edit_success">Edit successfully</string>
    <string name="delete_post_success">Delete successfully</string>
    <string name="delete_post_failed">Delete failed</string>
    <string name="mark_nsfw_success">Mark NSFW successfully</string>
    <string name="mark_nsfw_failed">Mark NSFW failed</string>
    <string name="unmark_nsfw_success">Unmark NSFW successfully</string>
...
    <string name="settings_proxy_enabled">Proxy Enabled</string>
    <string name="settings_proxy_type">Proxy Type</string>
    <string name="settings_proxy_hostname">Hostname</string>
    <string name="settings_proxy_port">Port</string>

    <!-- API keys-->
    <string name="settings_api_keys_title">API Keys</string>
    <string name="settings_api_keys_summary">Enter your own API keys, including your Client ID</string>
    <string name="client_id_pref_key" translatable="false">client_id_pref_key</string>
    <string name="settings_client_id_title">Reddit API Client ID</string>
    <string name="settings_client_id_summary">Use a custom Client ID for the Reddit API</string>
    <string name="default_client_id" translatable="false">Ro2J-y8bN412oS6BeaIj0A</string>
    <string name="client_id_length_error">Client ID must be exactly 22 characters long.</string>
    <string name="tap_to_set_client_id">Tap to set Client ID</string>
    <string name="set_client_id_dialog_message">Set the Reddit API Client ID in Settings</string>
    <string name="settings_giphy_api_key_title">Giphy API Key</string>
...
